# LoggerAI

./: .gitignore  LICENSE.md  README.md  sample.py
ailoggerSDK/ailogger_PythonSDK/: README.md  setup.py
src/backend/: docker-compose.yml
src/backend/application/core/: repositories.py  use_case.py
src/backend/application/ports/: data_ports.py  webhook_port.py
src/backend/automation/: Dockerfile  Taskfile.yml  main.py  pyproject.toml  requirements.txt
src/backend/automation/app/api/: routes.py
src/backend/automation/app/api/endpoints/: usecase.py
src/backend/automation/app/config/: config-template.toml
src/backend/automation/app/core/: entities.py  repositories.py  services.py
src/backend/config/: config-template.toml
src/backend/webhook/: Taskfile.yml  main.py  requirements.txt
src/backend/webhook/adapters/: data_adapter.py  webhook_adapter.py
src/backend/webhook/application/core/: entities.py  llm.py  repositories.py
src/backend/webhook/config/: config-template.toml
