[tool.poetry]
name = "app"
version = "0.1.0"
description = "automation module for the logger AI"
authors = ["RAVS"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
bson = "^0.5.10"
pymongo = "^4.6.3"
pydantic = "^2.7.1"
pyopenssl = "21.0.0"
cryptography = "42.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
